--- a/addPoll.html
+++ b/addPoll.html
@@ -30,6 +30,8 @@
         .btnColors {
             background-color: #006DA0 !important;
             color: #ECEDEF !important;
+            width: 70px;
+            height: 30px
         }
 
         /*.btnHoverColor:hover {
@@ -57,6 +59,50 @@
             border: none;
             cursor: pointer;
         }
+        input[type=text] {
+            padding: 12px 20px;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input {
+            font-size: 18px;
+            padding: 10px 10px 10px 5px;
+            display: block;
+            width: 300px;
+            border: 1px solid #212121;
+            background: transparent !important;
+            color: #212121;
+            /*border-radius: 10px;*/
+        }
+
+        label {
+            color: #7B8084 !important;
+            font-weight: normal !important;
+            position: absolute;
+            pointer-events: none;
+            right: 45px;
+            top: 20px;
+        }
+
+        input:focus ~ label,
+        input:valid ~ label {
+            top: -1px;
+            font-size: 12px;
+            padding-left: 3px;
+            padding-right: 3px;
+            padding-bottom: 3px;
+            color: #7B8084 !important;
+            background: #F2F2F2 !important;
+            background-size: 50px 30px;
+        }
+
+        input:focus,
+        input:valid {
+            border-color: #006DA0 !important;
+        }
     </style>
     <nav class="w3-sidenav w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
         <div class="w3-margin ">
@@ -64,30 +110,32 @@
                 <img class="w3-center w3-closenav w3-xlarge " src="avatar/man-with-tie.png" style="width:100px ; height:100px" />
             </div>
             <br />
-            <a href="www.google.com" class="rightMenuColor w3-center"> &nbsp;نام کاربر</a>
+            <a href="editprofile.html" class="rightMenuColor w3-center"> &nbsp;نام کاربر</a>
             <br />
             <a class="rightMenuColor" onclick="myFunction('Demo1')">
                 <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
                 &nbsp;<span class="glyphicon glyphicon-chevron-down " style="color:#7B8084;margin-top:2px"></span>
             </a>
             <div id="Demo1" class="w3-container w3-hide ">
-                <a class="rightMenuColor" href="#"> &nbsp;فروشگاه اول</a>
-                <a class="rightMenuColor" href="#">&nbsp; فروشگاه دوم</a>
-                <a class="rightMenuColor" href="#"> &nbsp;فروشگاه سوم </a>
-                <a class="w3-center rightMenuColor"> <span class="glyphicon glyphicon-plus"></span> &nbsp;جدید&nbsp;</a>
+                <a href="showShop.html" class="rightMenuColor"> &nbsp;فروشگاه اول</a>
+                <a href="showShop.html" class="rightMenuColor">&nbsp; فروشگاه دوم</a>
+                <a href="showShop.html" class="rightMenuColor"> &nbsp;فروشگاه سوم </a>
+                <a href="addShop.html" class="w3-center rightMenuColor">
+                    <span class="glyphicon glyphicon-plus"></span> &nbsp;جدید&nbsp;
+                </a>
             </div>
             <br />
             <div class="rightMenuColor">
-                <a href="~/Admin/Logout" class="rightMenuColor"><span class="glyphicon glyphicon-signal" style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های من </a>
+                <a href="showPoll.html" class="rightMenuColor"><span class="glyphicon glyphicon-signal" style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های من </a>
             </div><br />
             <div class="rightMenuColor">
-                <a href="~/Admin/Logout" class="rightMenuColor"><span class="glyphicon glyphicon-usd" style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من </a>
+                <a href="ShowDiscount.html" class="rightMenuColor"><span class="glyphicon glyphicon-usd" style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من </a>
             </div><br />
             <div class="rightMenuColor">
-                <a href="~/Admin/Logout" class="rightMenuColor"><span class="glyphicon glyphicon-earphone" style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی </a>
+                <a href="support.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone" style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی </a>
             </div><br />
             <div class="rightMenuColor">
-                <a href="~/Admin/Logout" class="rightMenuColor"><span class="glyphicon glyphicon-off" style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل </a>
+                <a href="HomePage.html" class="rightMenuColor"><span class="glyphicon glyphicon-off" style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل </a>
             </div><br />
         </div>
     </nav>
@@ -107,16 +155,17 @@
                 <div class="form-horizontal">
                     <div class="form-group">
                         <div class="col-md-11">
-                            سوال : <input type="text" required autofocus name="username" value="" class=" form-control w3-center w3-margin" id="editProfile-form-first-name-inp"
+                            <input type="text" required autofocus name="username" value="" class=" form-control  w3-margin" id="editProfile-form-first-name-inp"
                                           accept="application/txt" />
+                            <label> سوال </label>
                         </div>
                     </div>
-                    <br /><br />
+                    
                     <div class="form-group">
                         <div class="col-md-11">
-                            نوع نظرسنجی:
-                            <select class="form-control w3-margin" name="Type" style="height:40px" required>
-                                <option value="">انتخاب کنید</option>
+                          
+                            <select class="form-control w3-margin" name="Type" style="height:40px;background-color:#F2F2F2" required>
+                                <option value=""> نوع نظر سنجی انتخاب کنید</option>
                                 <!--need a for to read shop types from db-->
 
                                 <option value="MultiChoice"> چند گزینه ای</option>
@@ -135,10 +184,11 @@
                         </div>
                         <div style="border : solid 1px gray" class="w3-margin"></div>
                         <!--this htlm should be copy in next div when the + bottom is clicked-->
-                        <div class="col-md-10" id="cloneChoice">
+                        <div class="col-md-11" id="cloneChoice">
                             <span style="margin-top:20px ; direction:rtl">
-                                گزینه : <input type="text" required autofocus name="username" value="" class="form-control w3-center w3-margin" id="editProfile-form-first-name-inp"
+                                <input type="text" required autofocus name="username" value="" class="form-control w3-center w3-margin" id="editProfile-form-first-name-inp"
                                                accept="application/txt" />
+                                <label> گزینه </label>
                             </span>
                         </div>
                         <div class="col-md-2" style="margin-top:15px">
@@ -163,7 +213,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-offset-5 col-md-10">
+                        <div class="col-md-offset-5 col-md-11">
                             <input type="submit" value="ذخیره" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
                         </div>
                     </div>
